# spamid

./: CMakeLists.txt  Makefile  Makefile.win  README.md
doc/: Doxyfile
dokumentace/: spamid.tex
src/: arrays.c  arrays.h  classifier.c  classifier.h  hashtable.c  hashtable.h  primes.c  primes.h  spamid.c  vector.c  vector.h
src/structures/: hashtable.c  hashtable.h  vector.c  vector.h
src/utilities/: arrays.h  primes.c  primes.h  utils.c  utils.h
